<resources>
    <string name="app_name">Team Connect</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_about">About</string>
    <string name="menu_latest_news">Latest News</string>
    <string name="menu_directory">Directory</string>
    <string name="menu_hop">HOP</string>
    <string name="menu_departments">Departments</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_downloads">Downloads</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_complaint">Complaints</string>
    <string name="menu_safety">Safety</string>
    <string name="menu_learn">Learn</string>
    <string name="menu_logout">Logout</string>

    <!--Default Strings-->
    <string name="defaultEdittextValue">edit text value</string>
    <string name="defaultLoadingValue">Loading</string>

    <!--Login Screen Strings-->
    <string name="welcomeLabel">Welcome to Team Connect</string>
    <string name="loginLabel">Login to Team Connect</string>
    <string name="empnoLabel">Employee No.</string>
    <string name="passwordLabel">Password</string>
    <string name="invalidEmpno">Please enter Employee no</string>
    <string name="invalidPassword">Please enter Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="incidence">Incidence</string>


    <string-array name="types">
        <item>Reportable</item>
        <item>Non-Reportable/FirstAid</item>
        <item>Fire Accident</item>
        <item>Near Miss</item>
        <item>Fatal</item>
        <item>Deviations</item>
        <item>Disaster</item>
    </string-array>


    <string name="hop_about">NTPC is not only the foremost power generator; it is also among
the great places to work. The company is guided by the “People
before Plant Load Factor” mantra which is the template for all its
human resource related policies.</string>
    <string name="schedule">Schedule</string>
    <string name="reports">Reports</string>
</resources>