<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="2dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/mainLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            tools:context=".Login.LoginActivity">


            <TextView
                android:id="@+id/loginLabel"
                style="@style/OnBoardingHeadingTheme"
                android:layout_marginStart="15dp"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="30dp"
                android:text="@string/loginLabel">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="00dp"
                android:orientation="horizontal">

            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/empnoInputLayout"
                style="@style/OnBoardingInputLayoutTheme"
                android:layout_marginTop="100dp"
                app:startIconDrawable="@drawable/ic_outline_work_outline_24">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/empnoEt"
                    style="@style/OnBoardingEditTextTheme"
                    android:focusable="true"
                    android:hint="@string/empnoLabel"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordInputLayout"
                style="@style/PrimaryInputLayoutTheme"
                android:layout_marginBottom="30dp"
                android:layout_weight="1"
                app:errorEnabled="true"
                app:passwordToggleDrawable="@drawable/show_password_selector"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/ic_outline_lock_24"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEt"
                    style="@style/BaseEtTheme"
                    android:hint="@string/passwordLabel"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"></com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>


            <include
                android:id="@+id/loginLayout"
                layout="@layout/primary_button_layout" />

        </LinearLayout>

    </ScrollView>

</FrameLayout>